# rust-signoz-agent

./: Cargo.toml  LICENSE  README.md
src/: main.rs
